[project]
name = "cryogrid_pytools"
version = "0.1.0"
description = "Tools to read in CryoGrid MATLAB data to Python, includes forcing, outputs, DEMs, etc."
authors = [
    { name = "Luke Gregor", email = "lukegre@gmail.com" }
]
license = { text = "CC0-1.0" }

dependencies = [
    "joblib",
    "xarray",
    "pandas",
    "numpy",
    "scipy",
    "dask[diagnostics]",
    "munch",
    "loguru",
    "openpyxl",
    "matplotlib",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"