[project]
name = "cryogrid_pytools"
version = "0.1.0"
description = "Tools to read in CryoGrid MATLAB data to Python, includes forcing, outputs, DEMs, etc."
authors = [
    { name = "Luke Gregor", email = "lukegre@gmail.com" }
]
license = { text = "MIT license" }

dependencies = [
    "dask[array]",
    "dask[diagnostics]",
    "joblib",
    "loguru",
    "matplotlib",
    "munch",
    "numpy",
    "openpyxl",
    "pandas",
    "scipy",
    "xarray",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"